--- a/alerta-infp/config.json
+++ b/alerta-infp/config.json
@@ -3,7 +3,7 @@
     "version": "1.00",
     "slug": "alerta-infp",
     "description": "Addon-ul Homeassistant creaza senzorii “Cutremur”, “Magnitudine Cutremur”, “Secunde pana la Bucuresti” folosind datele disponibile la http://alerta.infp.ro",
-    "url": "https://github.com/blitzu/alerta-infp",
+    "url": "https://github.com/pcman75/alerta-infp",
     "startup": "application",
     "boot": "auto",
     "options": {
